prowlarr/overlays/prod/statefulset_patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prowlarr
spec:
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
